deployments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-spring-boot-app-service
spec:
  type: NodePort
  selector:
    app: my-spring-boot-app
  ports:
    - name: http
      port: 8080
      targetPort: 8080
