deployments/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-k8ssvc-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: users-dev.int.thomsonreuters.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: springboot-k8ssvc
                port:
                  number: 80
